--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skapa dokument enkelt</title>
-    <script defer type="module" src="./components/index.jsx"></script>
+    <script defer type="module" src="./components/index.js"></script>
   </head>
   <body>
     <div id="root"></div>
